# losungen6

./: CMakeLists.txt  mkpackage  package_content.txt
org.kde.losungen/: metadata.json
org.kde.losungen/contents/code/: functions.js
org.kde.losungen/contents/config/: config.qml  main.xml
org.kde.losungen/contents/ui/: BottomBar.qml  LosungDisplay.qml  LosungenData.qml  MainWidget.qml  main.qml  settings.qml
